Добавление шаблона вариантного анализа

--- a/inc/4-varanalyz.tex
+++ b/inc/4-varanalyz.tex
@@ -1,12 +1,197 @@
 \section{Вариантный анализ}
 
-Тут вводный текст общий.
+Выберем среду имитационного моделирования при помощи метода анализа иерархии (МАИ).
+Метод состоит в разложении проблемы на все более простые составные части и дальнейшей обработке последовательных суждений лица принимающего решение по парным сравнениям.
+В результате может быть выражена интенсивность или относительная степень взаимодействия элементов в иерархии.
+В результате получаются численные выражения этих суждений.
+МАИ включает в себя процедуры синтеза множественных суждений, получение приоритетных критериев и нахождение альтернативных решений.
+Полученные знания являются оценками в шкале отношений и соответствуют жёстким оценкам [4].
 
-Затем идет около 7 подпунктов, в некоторых из этих подпунктов еще есть подпункты.
+В качестве альтернатив используются различные среды имитационного моделирования, на которых может быть реализована система защиты.
+В зависимости от выбранной среды будет выбран тот или другой интерфейс взаимодействия с пользователем, так как каждая система имеет в своем составе такой интерфейс.
+Критерием эффективности является доступность, простота использования, интерфейс проектируемой системы, анимация, возможность изменения параметров моделируемой системы.
 
-Много табличек и формул, похоже придется допиливать шаблон под формулы.
+Альтернативы, которые участвуют в вариантном анализе:
+\begin{itemize}
+  \item Arena (альтернатива А);
+  \item GPSS (Альтернатива Б);
+  \item AnyLogic (Альтернатива В).
+\end{itemize}
 
-Это все примерно на 20 (OMG) страниц.
+Критерии, по которым выбирается тот, или иной алгоритм:
+\begin{itemize}
+  \item доступность (А1);
+  \item простота (А2);
+  \item интерфейс модели (А3);
+  \item анимация (А4);
+  \item внесение изменений в модель (А5).
+\end{itemize}
 
+\subsection{Построение матриц парных сравнений второго уровня}
+
+На основе вышеперечисленных критериев построим матрицу парных сравнений второго уровня, где строки и столбцы составляют выбранные критерии.
+Сравнение критериев проведём по шкале относительной важности согласно с табл. \ref{crit}.
+\begin{table}[H]
+  \caption{Оценка критериев}\label{crit}
+  \begin{tabular}{|p{4cm}|p{12cm}|}
+  \hline Интенсивность относительной важности & \multicolumn{1}{|c|}{Определение} \\
+  \hline 1 & если элементы $A_i$ и $A_k$ одинаково важны \\
+  \hline 3 & если элементы $A_i$ и $A_k$ одинаково важны \\
+  \hline 5 & если элемент $A_i$ значительно важнее элемента $A_k$ \\
+  \hline 7 & если элемент $A_i$ явно важнее элемента $A_k$ \\
+  \hline 9 & если элемент $A_i$ по своей значимости абсолютно превосходит элемент $A_k$ \\
+  \hline 2,4,6,8 & используются для облегчения компромиссов между оценками, слегка отличающимися от основных чисел \\
+  \hline
+  \end{tabular}
+\end{table}
+
+В результате выполнения попарных сравнений, построили матрицу, представленную в табл. \ref{matrix}.
+\begin{table}[H]
+  \caption{Матрица попарных сравнений второго уровня}\label{matrix}
+  \begin{tabular}{|p{0.6cm}|p{8cm}|l|l|l|l|l|}
+  \hline \multicolumn{2}{|c|}{Критерии} & A1 & A2 & A3 & A4 & A5 \\
+  \hline A1 & Доступность & 1 & 1/5 & 1/7 & 1/5 & 1/7 \\
+  \hline A2 & Простота & 5 & 1 & 1/5 & 3 & 1 \\
+  \hline A3 & Интерфейс модели & 7 & 5 & 1 & 5 & 5 \\
+  \hline A4 & Анимация & 5 & 1/3 & 1/5 & 1 & 1/7 \\
+  \hline A5 & Внесение изменений в модель & 7 & 1 & 1/5 & 7 & 1 \\
+  \hline
+  \end{tabular}
+\end{table}
+
+\subsection{Вычисление вектора приоритетов для матрицы парных сравнений второго уровня}
+
+Из группы матриц попарных сравнений формируется набор локальных приоритетов, которые выражают относительное влияние множества элементов на элемент примыкающего сверху уровня.
+Сначала вычислим геометрическое среднее в каждой строке матрицы A по формуле:
+\begin{equation}
+b_i = \sqrt[n]{\prod_{k=1}^{n}a_{ik}}
+\end{equation}
+
+Проведем вычисления компонент вектора локальных приоритетов:
+
+$b_1 = \sqrt[5]{1 \cdot 0,2 \cdot 0,1429 \cdot 0,2 \cdot 0,1429} = \sqrt[5]{0,0007} = 0,2339$
+
+$b_2 = \sqrt[5]{5 \cdot 1 \cdot 0,2 \cdot 3 \cdot 1} = \sqrt[5]{3} = 1,2457$
+
+$b_3 = \sqrt[5]{7 \cdot 5 \cdot 1 \cdot 5 \cdot 5} = \sqrt[5]{875} = 3,8762$
+
+$b_4 = \sqrt[5]{5 \cdot 0,3333 \cdot 0,2 \cdot 1 \cdot 0,1429} = \sqrt[5]{0,0476} = 0,5439$
+
+$b_5 = \sqrt[5]{7 \cdot 1 \cdot 0,2 \cdot 7 \cdot 1} = \sqrt[5]{9,8} = 1,5785$
+
+Просуммируем полученные значения:
+
+$B = 0,2339 + 1,2457 + 3,8762 + 0,5439 + 1,5785 = 7,4782$
+
+Определим значения компонент вектора локальных приоритетов по формуле:
+\begin{equation}
+x_i = \frac{b_i}{B}, i = \overline{1,n}
+\end{equation}
+
+Выполним расчеты:
+
+$x_1 = \frac{b_1}{B} =\frac{0,2339}{7,4782} = 0,0313$
+
+$x_2 = \frac{b_2}{B} =\frac{1,2457}{7,4782} = 0,1666$
+
+$x_3 = \frac{b_3}{B} =\frac{3,8762}{7,4782} = 0,5183$
+
+$x_4 = \frac{b_4}{B} =\frac{0,5439}{7,4782} = 0,0727$
+
+$x_5 = \frac{b_5}{B} =\frac{1,5785}{7,4782} = 0,2111$
+
+Так как числа $b_i$ нормализуются делением каждого числа на сумму всех чисел, то должно выполняться условие:
+\begin{equation}
+\sum_{i=1}^{n} x_i = 1, i = \overline{1,n}
+\end{equation}
+
+В итоге:
+
+$X = 0,0313 + 0,1666 + 0,5183 + 0,0727 + 0,2111 = 1$
+
+\subsection{Исследование на согласованность матрицы парных сравнений второго уровня}
+
+Оценим отношение согласованности для матрицы попарных сравнений второго уровня по формуле:
+\begin{equation}
+y_i = \sum_{i=1}^{n} a_{ik}, k = 1,2,...,n
+\end{equation}
+
+Выполним расчеты:
+
+$y_1 = 1 + 5 + 7 + 5 + 7 = 21$
+
+$y_2 = 0,2 + 1 + 5 + 0,3333 + 1 = 1,6222$
+
+$y_3 = 0,1429 + 0,2 + 1 + 0,2 + 0,2 = 19$
+
+$y_4 = 0,2 + 3 + 5 + 1 + 7 = 6,4858$
+
+$y_5 = 0,1429 + 1 + 5 + 0,1429 + 1 = 13,6666$
+
+Вычислим наибольшее собственное значение матрицы сравнений согласно формуле:
+\begin{equation}
+\lambda_{max} = \sum_{i=1}^{n} x_i \cdot y_i
+\end{equation}
+где $x_i$ --- значения компонент вектора локальных приоритетов.
+
+$\lambda_{max} = 0,0497 \cdot 21 + 0,4807 \cdot 1,6222 + 0,0531 \cdot 19 + 0,3085 \cdot 6,4858 +
+0,1080 \cdot 13,6666 = 1,0437 + 0,7797 + 1,0089 + 1,0009 + 1,4759 = 5,3091$
+
+Положительная обратно-симметричная матрица является согласованной тогда и только тогда, когда порядок матрицы и ее наибольшее собственное значение совпадают ($\lambda_{max} = n$).
+
+Если элементы положительной обратносимметричной согласованной матрицы A изменить незначительно, то максимальное собственное значение $\lambda_{max}$ также изменится незначительно.
+Если $\lambda_{max} \neq n$, всегда $\lambda_{max} > n$.
+
+Как и ожидалось:
+
+$\lambda_{max} = 5,3091 > n = 5$
+
+В качестве степени отклонения положительной обратно-симметричной матрицы A от согласованной матрицы принимается следующее отношение:
+\begin{equation}
+\text{ИС} = \frac{\lambda_{max} - n}{n - 1}
+\end{equation}
+которое называется индексом согласованности (ИС) матрицы А и является показателем близости этой матрицы к согласованной.
+
+Вычислим индекс согласованности для данной задачи:
+
+$\text{ИС} = \frac{5,3091 - 5}{4} = 0,0773$
+
+Теперь необходимо сравнить значение индекса согласованности со значением случайной согласованности.
+\begin{table}[H]
+  \caption{Случайная согласованность (СС)}\label{randcon}
+  \begin{tabular}{|p{4cm}|l|l|l|l|l|l|l|l|l|l|}
+  \hline Размер матрицы n & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 \\
+  \hline Случайная согласованность & 0 & 0 & 0,58 & 0,9 & 1,12 & 1,24 & 1,32 & 1,41 & 1,45 & 1,49 \\
+  \hline
+  \end{tabular}
+\end{table}
+
+Если разделить индекс согласованности на число, соответствующее случайной согласованности матрицы того же порядка, получается отношение согласованности (ОС):
+\begin{equation}
+\text{ОС} = \frac{\text{ИС}}{\text{СС}} \cdot 100\%
+\end{equation}
+
+Величина отношения согласованности должна быть порядка 10\% или менее, чтобы быть приемлемой.
+Если значение отношения согласованности выходит из этих пределов, то экспертам нужно исследовать задачу и пересмотреть суждения:
+
+$\text{ОС} = \frac{0,0773}{1,12} \cdot 100\% = 6,9\%$
+
+Полученное значение $\text{ОС} = 6,9\% < 10\%$.
+Считаем, что матрица попарных сравнений второго уровня является согласованной.
+\begin{table}[H]
+  \caption{Численные оценки предпочтений критериев ЛПР}\label{marks}
+  \begin{tabular}{|p{0.6cm}|p{8cm}|l|l|}
+  \hline \multicolumn{2}{|c|}{Критерии} & Место & Вес \\
+  \hline A1 & Доступность & 1 & 0,4807 \\
+  \hline A2 & Простота & 2 & 0,3085 \\
+  \hline A3 & Интерфейс модели & 3 & 0,1080 \\
+  \hline A4 & Анимация & 4 & 0,0531 \\
+  \hline A5 & Внесение изменений в модель & 5 & 0,0497 \\
+  \hline
+  \end{tabular}
+\end{table}
+
+Исходя из вычисленных значений численных оценок предпочтения делаем вывод, что критерий <<Доступность>> является наиболее важным.
+Критерии <<Простота>> и <<Интерфейс модели>> имеют существенный вес, а критерии <<Анимация>> и <<Внесение изменений в модель>> малозначимы.
 
 \clearpage
