Расширил шаблон по вариантному анализу

--- a/inc/4-varanalyz.tex
+++ b/inc/4-varanalyz.tex
@@ -180,7 +180,7 @@ $\text{ОС} = \frac{0,0773}{1,12} \cdot 100\% = 6,9\%$
 Считаем, что матрица попарных сравнений второго уровня является согласованной.
 \begin{table}[H]
   \caption{Численные оценки предпочтений критериев ЛПР}\label{marks}
-  \begin{tabular}{|p{0.6cm}|p{8cm}|l|l|}
+  \begin{tabular}{|l|l|l|l|}
   \hline \multicolumn{2}{|c|}{Критерии} & Место & Вес \\
   \hline A1 & Доступность & 1 & 0,4807 \\
   \hline A2 & Простота & 2 & 0,3085 \\
@@ -193,5 +193,90 @@ $\text{ОС} = \frac{0,0773}{1,12} \cdot 100\% = 6,9\%$
 
 Исходя из вычисленных значений численных оценок предпочтения делаем вывод, что критерий <<Доступность>> является наиболее важным.
 Критерии <<Простота>> и <<Интерфейс модели>> имеют существенный вес, а критерии <<Анимация>> и <<Внесение изменений в модель>> малозначимы.
+
+\subsection{Построение матриц попарных сравнений третьего уровня}
+
+На третьем уровне МАИ для каждого критерия проводятся попарные сравнения альтернатив и реализуются этап синтеза локальных приоритетов $z_j$ (j --- номер альтернативы, $j = \overline{1,m}$ в нашем примере $m = 3$) в соответствии с
+формулами (4.1)...(4.8).
+Так же проводится исследование матрицы на согласованность [4].
+
+\subsubsection{Критерий доступность}
+
+В таблице 4.5 проведены попарные сравнения альтернатив по критерию А1 <<Доступность>>.
+\begin{table}[H]
+  \caption{Матрица попарных сравнений для критерия <<Доступность>>}
+  \begin{tabular}{|l|l|l|l|}
+  \hline Альтернатива & M1 & M2 & M3 \\
+  \hline M1 & 1 & 1/5 & 1,5 \\
+  \hline M2 & 5 & 1 & 1 \\
+  \hline M3 & 5 & 1 & 1 \\
+  \hline
+  \end{tabular}
+\end{table}
+
+Согласно формуле (4.1) вычислим сравнительную желательность альтернатив по первому критерию:
+
+$b_1 = \sqrt[3]{1 \cdot 0,2 \cdot 0,2} = \sqrt[3]{0,4} = 0,7368$
+
+$b_2 = \sqrt[3]{5 \cdot 1 \cdot 1} = \sqrt[3]{5} = 1,7099$
+
+$b_3 = \sqrt[3]{5 \cdot 1 \cdot 1} = \sqrt[3]{5} = 1,7099$
+
+Просуммируем полученные значения:
+
+$B = 0,7368+ 1,7099 + 1,7099 = 4,1566$
+
+Далее воспользуемся формулой (4.2), заменив идентификаторы $x_i$ на $z_j$:
+
+$z_1 = \frac{0,7368}{4,1566} = 0,1773$
+
+$z_2 = \frac{1,7099}{4,1566} = 0,4114$
+
+$z_3 = \frac{1,7099}{4,1566} = 0,4114$
+
+Проведем проверку по формуле (4.3):
+
+$\sum_{i=1}^{3} 0,1773 + 0,4114 + 0,4114 = 1,0001$
+
+Необходимо оценить погрешность вычислений по формуле (4.4):
+
+$\delta_{x} = \frac{|1 - 1,0001|}{1} \cdot 100\% = 0,01$
+
+Оценим отношение согласованности для матрицы попарных сравнений второго уровня по формуле 4.5:
+
+$y_1 = 1 + 5 + 5 = 11$
+
+$y_2 = 0,2 + 1 + 1 = 2,2$
+
+$y_3 = 0,2 + 1 + 1 = 2,2$
+
+Вычислим наибольшее собственное значение матрицы сравнений согласно (4.6):
+
+$\lambda_{max} = 0,1773 \cdot 11 + 0,4114 \cdot  2,2 + 20,4114 \cdot 2,2 = 1,1503 + 0,9551 + 0,9551 = 3,0685$
+
+Вычислим индекс согласованности для данной матрицы:
+
+$\text{ИС} = \frac{3,0685 - 3}{2} = 0,0343$
+
+Далее найдем отношение согласованности:
+
+$\text{ОС} = \frac{0,0343}{0,58} \cdot 100\% = 5,90\%$
+
+Полученное значение $\text{ОС} = 5,90\% < 10\%$.
+Считаем, что матрица парных сравнений третьего уровня по критерию А1 является согласованной.
+
+\subsubsection{Критерий простота}
+
+\subsubsection{Критерий интерфейс модели}
+
+\subsubsection{Критерий анимация}
+
+\subsubsection{Критерий внесение измененйи в модель}
+
+\subsection{Анализ результатов оценки альтернатив}
+
+\subsection{Синтез глобальных приоритетов альтернатив}
+
+\subsection{Анализ результатов}
 
 \clearpage
