Рассчитаны матрицы второго уровня

--- a/inc/0-bibliography.tex
+++ b/inc/0-bibliography.tex
@@ -22,6 +22,11 @@
     Сост.: Ю.Н. Щепин -- Севастополь:
     Изд-во СевНТУ, 2008. -- 28 с.
 
+\bibitem{mai}
+    Блюмин С.Л., Шуйкова И.А.
+    Модели и методы принятия решений в условиях неопределенности. --
+    Липецк: ЛЭГИ, 2001. -- 138 с.
+
 \bibitem{nist}
     Hogan, M.
     NIST Cloud Computing Standarts Roadmap /
