--- a/inc/0-glossary.tex
+++ b/inc/0-glossary.tex
@@ -70,6 +70,18 @@
 
 \hypertarget{vpn}{VPN --- Virtual Private Network, виртуальная частная сеть}
 
+\hypertarget{mai}{МАИ --- метод анализа иерархии}
+
+\hypertarget{kvm}{KVM --- Kernel-based Virtual Machine, свободный гипервизор}
+
+\hypertarget{is}{ИС --- индекс согласованности}
+
+\hypertarget{ss}{СС --- случайная согласованность}
+
+\hypertarget{ots}{ОС --- отношение согласованности}
+
+\hypertarget{lpr}{ЛПР --- лицо принимающее решение}
+
 \hypertarget{iot}{IoT --- Internet of Things, интернет вещей}
 
 \hypertarget{ddos}{DDoS --- Distributed Denial of Service, распределенная атака на отказ}
@@ -86,6 +98,8 @@
 
 \hypertarget{ntp}{NTP --- Network Time Protocol, протокол сетевого времени}
 
+\clearpage
+
 \hypertarget{snmp}{SNMP --- Simple Network Management Protocol, простой протокол сетевого управления}
 
 \hypertarget{nda}{NDA --- Non-disclosure agreement, соглашение о неразглашении}
@@ -97,8 +111,6 @@
 \hypertarget{xss}{XSS --- Cross-Site Scripting, межсайтовый скриптинг}
 
 \hypertarget{ftp}{FTP --- File Transfer Protocol, протокол передачи данных}
-
-\clearpage
 
 \hypertarget{ssl}{SSL --- Secure Sockets Layer, уровень защищенных cокетов}
 
