--- a/inc/4-varanalyz.tex
+++ b/inc/4-varanalyz.tex
@@ -1,30 +1,29 @@
 \section{Вариантный анализ}
 
-Выберем среду имитационного моделирования при помощи метода анализа иерархии (МАИ).
+Выберем гипервизор для организации виртуализации при помощи метода анализа иерархии (\hyperlink{mai}{МАИ}).
 Метод состоит в разложении проблемы на все более простые составные части и дальнейшей обработке последовательных суждений лица принимающего решение по парным сравнениям.
 В результате может быть выражена интенсивность или относительная степень взаимодействия элементов в иерархии.
 В результате получаются численные выражения этих суждений.
 МАИ включает в себя процедуры синтеза множественных суждений, получение приоритетных критериев и нахождение альтернативных решений.
-Полученные знания являются оценками в шкале отношений и соответствуют жёстким оценкам [4].
+Полученные знания являются оценками в шкале отношений и соответствуют жестким оценкам \cite{var-analyz}.
 
-В качестве альтернатив используются различные среды имитационного моделирования, на которых может быть реализована система защиты.
-В зависимости от выбранной среды будет выбран тот или другой интерфейс взаимодействия с пользователем, так как каждая система имеет в своем составе такой интерфейс.
-Критерием эффективности является доступность, простота использования, интерфейс проектируемой системы, анимация, возможность изменения параметров моделируемой системы.
+В качестве альтернатив используются различные гипервизоры, на которых может быть реализована виртуализация для облачной среды.
+В зависимости от выбранного гипервизорабудет выбран тот или другой интерфейс взаимодействия с пользователем, так как каждая система имеет в своем составе такой интерфейс.
+Критерием эффективности являются: цена, масштабируемость, отказоустойчивость, интерфейсы управления.
 
 Альтернативы, которые участвуют в вариантном анализе:
 \begin{itemize}
-  \item Arena (альтернатива А);
-  \item GPSS (Альтернатива Б);
-  \item AnyLogic (Альтернатива В).
+  \item \hyperlink{kvm}{KVM} (альтернатива А);
+  \item Hyper-V (альтернатива Б);
+  \item VMware vSphere (альтернатива В).
 \end{itemize}
 
 Критерии, по которым выбирается тот, или иной алгоритм:
 \begin{itemize}
-  \item доступность (А1);
-  \item простота (А2);
-  \item интерфейс модели (А3);
-  \item анимация (А4);
-  \item внесение изменений в модель (А5).
+  \item цена (А1);
+  \item масштабируемость (А2);
+  \item отказоустойчивость (А3);
+  \item интерфейсы управления (А4).
 \end{itemize}
 
 \subsection{Построение матриц парных сравнений второго уровня}
@@ -48,13 +47,12 @@
 В результате выполнения попарных сравнений, построили матрицу, представленную в табл. \ref{matrix}.
 \begin{table}[H]
   \caption{Матрица попарных сравнений второго уровня}\label{matrix}
-  \begin{tabular}{|p{0.6cm}|p{8cm}|l|l|l|l|l|}
-  \hline \multicolumn{2}{|c|}{Критерии} & A1 & A2 & A3 & A4 & A5 \\
-  \hline A1 & Доступность & 1 & 1/5 & 1/7 & 1/5 & 1/7 \\
-  \hline A2 & Простота & 5 & 1 & 1/5 & 3 & 1 \\
-  \hline A3 & Интерфейс модели & 7 & 5 & 1 & 5 & 5 \\
-  \hline A4 & Анимация & 5 & 1/3 & 1/5 & 1 & 1/7 \\
-  \hline A5 & Внесение изменений в модель & 7 & 1 & 1/5 & 7 & 1 \\
+  \begin{tabular}{|l|l|l|l|l|l|}
+  \hline \multicolumn{2}{|c|}{Критерии} & A1 & A2 & A3 & A4 \\
+  \hline A1 & Цена & 1 & 1/5 & 1/7 & 3 \\
+  \hline A2 & Масштабируемость & 5 & 1 & 1/5 & 7 \\
+  \hline A3 & Отказоустойчивость & 7 & 5 & 1 & 8 \\
+  \hline A4 & Интерфейсы управления & 1/3 & 1/7 & 1/8 & 1 \\
   \hline
   \end{tabular}
 \end{table}
@@ -62,80 +60,76 @@
 \subsection{Вычисление вектора приоритетов для матрицы парных сравнений второго уровня}
 
 Из группы матриц попарных сравнений формируется набор локальных приоритетов, которые выражают относительное влияние множества элементов на элемент примыкающего сверху уровня.
-Сначала вычислим геометрическое среднее в каждой строке матрицы A по формуле:
-\begin{equation}
+Сначала вычислим геометрическое среднее в каждой строке матрицы A по формуле \ref{geomean}:
+\begin{equation}\label{geomean}
 b_i = \sqrt[n]{\prod_{k=1}^{n}a_{ik}}
 \end{equation}
 
 Проведем вычисления компонент вектора локальных приоритетов:
 
-$b_1 = \sqrt[5]{1 \cdot 0,2 \cdot 0,1429 \cdot 0,2 \cdot 0,1429} = \sqrt[5]{0,0007} = 0,2339$
+$b_1 = \sqrt[4]{1 \cdot 0,2 \cdot 0,1429 \cdot 3} = \sqrt[4]{0,0857} = 0,5411$
 
-$b_2 = \sqrt[5]{5 \cdot 1 \cdot 0,2 \cdot 3 \cdot 1} = \sqrt[5]{3} = 1,2457$
+$b_2 = \sqrt[4]{5 \cdot 1 \cdot 0,2 \cdot 7} = \sqrt[4]{7} = 1,6266$
 
-$b_3 = \sqrt[5]{7 \cdot 5 \cdot 1 \cdot 5 \cdot 5} = \sqrt[5]{875} = 3,8762$
+$b_3 = \sqrt[4]{7 \cdot 5 \cdot 1 \cdot 8} = \sqrt[4]{280} = 4,0906$
 
-$b_4 = \sqrt[5]{5 \cdot 0,3333 \cdot 0,2 \cdot 1 \cdot 0,1429} = \sqrt[5]{0,0476} = 0,5439$
-
-$b_5 = \sqrt[5]{7 \cdot 1 \cdot 0,2 \cdot 7 \cdot 1} = \sqrt[5]{9,8} = 1,5785$
+$b_4 = \sqrt[4]{0,3333 \cdot 0,1429 \cdot 0,125 \cdot 1} = \sqrt[4]{0,006} = 0,2783$
 
 Просуммируем полученные значения:
 
-$B = 0,2339 + 1,2457 + 3,8762 + 0,5439 + 1,5785 = 7,4782$
+$B = 0,5411 + 1,6266 + 4,0906 + 0,2783 = 6,5355$
 
-Определим значения компонент вектора локальных приоритетов по формуле:
-\begin{equation}
+Определим значения компонент вектора локальных приоритетов по формуле \ref{veccom}:
+\begin{equation}\label{veccom}
 x_i = \frac{b_i}{B}, i = \overline{1,n}
 \end{equation}
 
 Выполним расчеты:
 
-$x_1 = \frac{b_1}{B} =\frac{0,2339}{7,4782} = 0,0313$
+$x_1 = \frac{b_1}{B} =\frac{0,5411}{6,5355} = 0,0828$
 
-$x_2 = \frac{b_2}{B} =\frac{1,2457}{7,4782} = 0,1666$
+$x_2 = \frac{b_2}{B} =\frac{1,6266}{6,5355} = 0,2489$
 
-$x_3 = \frac{b_3}{B} =\frac{3,8762}{7,4782} = 0,5183$
+$x_3 = \frac{b_3}{B} =\frac{4,0906}{6,5355} = 0,6259$
 
-$x_4 = \frac{b_4}{B} =\frac{0,5439}{7,4782} = 0,0727$
+$x_4 = \frac{b_4}{B} =\frac{0,2783}{6,5355} = 0,0426$
 
-$x_5 = \frac{b_5}{B} =\frac{1,5785}{7,4782} = 0,2111$
-
-Так как числа $b_i$ нормализуются делением каждого числа на сумму всех чисел, то должно выполняться условие:
-\begin{equation}
+Так как числа $b_i$ нормализуются делением каждого числа на сумму всех чисел, то должно выполняться условие 
+\ref{vecsum}:
+\begin{equation}\label{vecsum}
 \sum_{i=1}^{n} x_i = 1, i = \overline{1,n}
 \end{equation}
 
 В итоге:
 
-$X = 0,0313 + 0,1666 + 0,5183 + 0,0727 + 0,2111 = 1$
+$X = 0,0828 + 0,2489 + 0,6259 + 0,0426 = 1,0002$
+
+Погрешность в $0,0002$ допустима и является следствием округления до четвертого знака.
 
 \subsection{Исследование на согласованность матрицы парных сравнений второго уровня}
 
-Оценим отношение согласованности для матрицы попарных сравнений второго уровня по формуле:
-\begin{equation}
+Оценим отношение согласованности для матрицы попарных сравнений второго уровня по формуле \ref{atcon}:
+\begin{equation}\label{atcon}
 y_i = \sum_{i=1}^{n} a_{ik}, k = 1,2,...,n
 \end{equation}
 
 Выполним расчеты:
 
-$y_1 = 1 + 5 + 7 + 5 + 7 = 21$
+$y_1 = 1 + 5 + 7 + 0,3333 = 13,3333$
 
-$y_2 = 0,2 + 1 + 5 + 0,3333 + 1 = 1,6222$
+$y_2 = 0,2 + 1 + 5 + 0,1429 = 6,3429$
 
-$y_3 = 0,1429 + 0,2 + 1 + 0,2 + 0,2 = 19$
+$y_3 = 0,1429 + 0,2 + 1 + 0,125 = 1,4679$
 
-$y_4 = 0,2 + 3 + 5 + 1 + 7 = 6,4858$
+$y_4 = 3 + 7 + 8 + 1 = 19$
 
-$y_5 = 0,1429 + 1 + 5 + 0,1429 + 1 = 13,6666$
-
-Вычислим наибольшее собственное значение матрицы сравнений согласно формуле:
-\begin{equation}
+Вычислим наибольшее собственное значение матрицы сравнений согласно формуле \ref{maxm}:
+\begin{equation}\label{maxm}
 \lambda_{max} = \sum_{i=1}^{n} x_i \cdot y_i
 \end{equation}
 где $x_i$ --- значения компонент вектора локальных приоритетов.
 
-$\lambda_{max} = 0,0497 \cdot 21 + 0,4807 \cdot 1,6222 + 0,0531 \cdot 19 + 0,3085 \cdot 6,4858 +
-0,1080 \cdot 13,6666 = 1,0437 + 0,7797 + 1,0089 + 1,0009 + 1,4759 = 5,3091$
+$\lambda_{max} = 0,0828 \cdot 13,3333 + 0,2489 \cdot 6,3429 + 0,6259 \cdot 1,4679 + 0,0426 \cdot 19 = 1,104 + 1,5787 + 0,9188 + 0,8094  = 4,4109$
 
 Положительная обратно-симметричная матрица является согласованной тогда и только тогда, когда порядок матрицы и ее наибольшее собственное значение совпадают ($\lambda_{max} = n$).
 
@@ -144,21 +138,21 @@ $\lambda_{max} = 0,0497 \cdot 21 + 0,4807 \cdot 1,6222 + 0,0531 \cdot 19 + 0,308
 
 Как и ожидалось:
 
-$\lambda_{max} = 5,3091 > n = 5$
+$\lambda_{max} = 4,4109 > n = 4$
 
-В качестве степени отклонения положительной обратно-симметричной матрицы A от согласованной матрицы принимается следующее отношение:
-\begin{equation}
+В качестве степени отклонения положительной обратно-симметричной матрицы A от согласованной матрицы принимается отношение:
+\begin{equation}\label{icon}
 \text{ИС} = \frac{\lambda_{max} - n}{n - 1}
 \end{equation}
-которое называется индексом согласованности (ИС) матрицы А и является показателем близости этой матрицы к согласованной.
+которое называется индексом согласованности (\hyperlink{is}{ИС}) матрицы А и является показателем близости этой матрицы к согласованной.
 
 Вычислим индекс согласованности для данной задачи:
 
-$\text{ИС} = \frac{5,3091 - 5}{4} = 0,0773$
+$\text{ИС} = \frac{4,4109 - 4}{3} = 0,137$
 
-Теперь необходимо сравнить значение индекса согласованности со значением случайной согласованности.
+Теперь необходимо сравнить значение индекса согласованности со значением случайной согласованности (\hyperlink{ss}{СС}).
 \begin{table}[H]
-  \caption{Случайная согласованность (СС)}\label{randcon}
+  \caption{Случайная согласованность}\label{randcon}
   \begin{tabular}{|p{4cm}|l|l|l|l|l|l|l|l|l|l|}
   \hline Размер матрицы n & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 \\
   \hline Случайная согласованность & 0 & 0 & 0,58 & 0,9 & 1,12 & 1,24 & 1,32 & 1,41 & 1,45 & 1,49 \\
@@ -166,41 +160,45 @@ $\text{ИС} = \frac{5,3091 - 5}{4} = 0,0773$
   \end{tabular}
 \end{table}
 
-Если разделить индекс согласованности на число, соответствующее случайной согласованности матрицы того же порядка, получается отношение согласованности (ОС):
-\begin{equation}
+Если разделить индекс согласованности на число, соответствующее случайной согласованности матрицы того же порядка, получается отношение согласованности (\hyperlink{ots}{ОС}) \ref{acon}:
+\begin{equation}\label{acon}
 \text{ОС} = \frac{\text{ИС}}{\text{СС}} \cdot 100\%
 \end{equation}
 
 Величина отношения согласованности должна быть порядка 10\% или менее, чтобы быть приемлемой.
+На практике же допускается значение, не превышающее 20\% \cite{mai}.
 Если значение отношения согласованности выходит из этих пределов, то экспертам нужно исследовать задачу и пересмотреть суждения:
 
-$\text{ОС} = \frac{0,0773}{1,12} \cdot 100\% = 6,9\%$
+$\text{ОС} = \frac{0,137}{0,9} \cdot 100\% = 15,2\%$
 
-Полученное значение $\text{ОС} = 6,9\% < 10\%$.
+Полученное значение $\text{ОС} = 15,2\% < 20\%$.
 Считаем, что матрица попарных сравнений второго уровня является согласованной.
+
+Оценки предпочтений критериев лица принимающего решение (\hyperlink{lpr}{ЛПР}) представлены в табл. \ref{marks}.
 \begin{table}[H]
   \caption{Численные оценки предпочтений критериев ЛПР}\label{marks}
   \begin{tabular}{|l|l|l|l|}
   \hline \multicolumn{2}{|c|}{Критерии} & Место & Вес \\
-  \hline A1 & Доступность & 1 & 0,4807 \\
-  \hline A2 & Простота & 2 & 0,3085 \\
-  \hline A3 & Интерфейс модели & 3 & 0,1080 \\
-  \hline A4 & Анимация & 4 & 0,0531 \\
-  \hline A5 & Внесение изменений в модель & 5 & 0,0497 \\
+  \hline A3 & Отказоустойчивость & 1 & 0,6259 \\
+  \hline A2 & Масштабируемость & 2 & 0,2489 \\
+  \hline A1 & Цена & 3 & 0,0828 \\
+  \hline A4 & Интерфейсы управления & 4 & 0,0426 \\
   \hline
   \end{tabular}
 \end{table}
 
-Исходя из вычисленных значений численных оценок предпочтения делаем вывод, что критерий <<Доступность>> является наиболее важным.
-Критерии <<Простота>> и <<Интерфейс модели>> имеют существенный вес, а критерии <<Анимация>> и <<Внесение изменений в модель>> малозначимы.
+Исходя из вычисленных значений численных оценок предпочтения делаем вывод, что критерий <<Отказоустойчивость>> является наиболее важным.
+Критерий <<Масштабирование>> имеет существенный вес, а критерии <<Цена>> и <<Интерфейсы управления>> малозначимы.
 
 \subsection{Построение матриц попарных сравнений третьего уровня}
 
 На третьем уровне МАИ для каждого критерия проводятся попарные сравнения альтернатив и реализуются этап синтеза локальных приоритетов $z_j$ (j --- номер альтернативы, $j = \overline{1,m}$ в нашем примере $m = 3$) в соответствии с
 формулами (4.1)...(4.8).
-Так же проводится исследование матрицы на согласованность [4].
+Также проводится исследование матрицы на согласованность \cite{var-analyz}.
 
-\subsubsection{Критерий доступность}
+\subsubsection{Критерий <<Отказоустойчивость>>}
+
+-----------------------------------------------------------------------------------------
 
 В таблице 4.5 проведены попарные сравнения альтернатив по критерию А1 <<Доступность>>.
 \begin{table}[H]
@@ -265,13 +263,11 @@ $\text{ОС} = \frac{0,0343}{0,58} \cdot 100\% = 5,90\%$
 Полученное значение $\text{ОС} = 5,90\% < 10\%$.
 Считаем, что матрица парных сравнений третьего уровня по критерию А1 является согласованной.
 
-\subsubsection{Критерий простота}
+\subsubsection{Критерий <<Масштабируемость>>}
 
-\subsubsection{Критерий интерфейс модели}
+\subsubsection{Критерий <<Цена>>}
 
-\subsubsection{Критерий анимация}
-
-\subsubsection{Критерий внесение измененйи в модель}
+\subsubsection{Критерий <<Интерфейсы управления>>}
 
 \subsection{Анализ результатов оценки альтернатив}
 
